@@ -25,6 +25,8 @@ update-manager (1:0.133.7) UNRELEASED; urgency=low
     instead
   * debian/control:
     - point to lp:~ubuntu-core-dev/update-manager/lucid
+  * check-new-release-gtk:
+    - use GtkProgress when downloading the release upgrader
 
   [ Dustin Kirkland ]
   * debian/91-release-upgrade: do the release upgrade check with the
